# fastapi_api_test

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: conversion.py
app/core/: config.py  container.py  exceptions.py
app/repository/: __init__.py  rate_conversion.py
app/schema/: rate_conversion.py
app/services/: __init__.py  rate_conversion.py
app/tests/: test_api.py
app/utils/: class_object.py
