[metadata]
name = test
version = 2022.01.20
author = test
description = test
long_description = file: docs/README.md
license = Proprietary
classifiers =
    Framework :: Fastapi
    License :: Proprietary
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[flake8]
exclude =
    .git,
    __pycache__,
    migrations,
    node_modules,
    site-packages,
    *_settings.py,
    wsgi.py,
    venv,
    ENV
ignore =
  # flake8 is too strict, black disagrees.
  W503, W504
  # Black disagrees.
  E203
  # Let developers use whatever variable names they want
  E741
# 88 + 1. If set to the same value as black the checks will fail.
max-line-length = 89
per-file-ignores =
       urls.py:E501
